--- a/src/css/partials/_main.scss
+++ b/src/css/partials/_main.scss
@@ -5,6 +5,7 @@
 @use 'common/flex';
 @use 'common/media';
 @use 'common/rhythm';
+@use 'common/polyfill' as pf;
 
 //----------------------------------------------------------
 // body colors and fonts
@@ -68,7 +69,7 @@ article {
     a {
       font-weight: 400;
 
-      text-decoration: underline var(--accent-lite) solid 2.5px;
+      @include pf.text-decoration(underline, solid, var(--accent-lite), 2.5px);
       text-decoration-skip-ink: none;
       text-underline-offset: 0.0625em;
       transition: color var(--defocus-time);
